[package]
name = 'eth1_api'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
bls = { workspace = true }
dashmap = { workspace = true }
dedicated_executor = { workspace = true }
derive_more = { workspace = true }
eip_7594 = { workspace = true }
either = { workspace = true }
enum-iterator = { workspace = true }
eth2_libp2p = { workspace = true }
ethereum-types = { workspace = true }
execution_engine = { workspace = true }
features = { workspace = true }
fork_choice_control = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
helper_functions = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
itertools = { workspace = true }
jwt-simple = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
panics = { workspace = true }
prometheus_metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssz = { workspace = true }
static_assertions = { workspace = true }
std_ext = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
try_from_iterator = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
web3 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
httpmock = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
unwrap_none = { workspace = true }
