[package]
name = 'execution_engine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bls = { workspace = true }
either = { workspace = true }
ethereum-types = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_utils = { workspace = true }
ssz = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
serde_json = { workspace = true }
