[package]
name = 'execution_engine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
const-hex = { workspace = true }
either = { workspace = true }
eth2_libp2p = { workspace = true }
ethereum-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_utils = { workspace = true }
ssz = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
serde_json = { workspace = true }
