[package]
name = 'features'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
log = { workspace = true }
parse-display = { workspace = true }
variant_count = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
testing_logger = { workspace = true }
