[package]
name = 'features'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
log = { workspace = true }
logging = { workspace = true }
parse-display = { workspace = true }
tracing = { workspace = true }
variant_count = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
tracing-test = { workspace = true }

