[package]
name = 'grandine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
allocator = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
runtime = { workspace = true, features = ["network-holesky"] }
directories = { workspace = true }
grandine_version = { workspace = true }
validator = { workspace = true }
fork_choice_control = { workspace = true }
fork_choice_store = { workspace = true }
eth1_api = { workspace = true }
signer = { workspace = true }
slashing_protection = { workspace = true }
http_api = { workspace = true }
slasher = { workspace = true }
types = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
jni = "0.21.1"

[dev-dependencies]
dirs = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[features]
logger-always-write-style = ['runtime/logger-always-write-style']

# `preset-any` and `network-any` should not be passed to Cargo.
# They only exist to avoid duplicating lists of features.
preset-any = []

preset-mainnet = ['preset-any', 'runtime/preset-mainnet']
preset-minimal = ['preset-any', 'runtime/preset-minimal']

network-any = []

network-goerli = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-goerli'
]
network-mainnet = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-mainnet'
]
network-sepolia = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-sepolia'
]
network-shadow = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-shadow'
]
network-holesky = [
    'network-any', 
    'preset-mainnet',
    'runtime/network-holesky'
]

default-networks = [
    'network-mainnet',
    'network-sepolia',
    'network-shadow',
    'network-holesky',
]
