[package]
name = 'grandine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
allocator = { workspace = true }
anyhow = { workspace = true }
bls = { workspace = true }
builder_api = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
directories = { workspace = true }
doppelganger_protection = { workspace = true }
eth1 = { workspace = true }
eth1_api = { workspace = true }
fork_choice_control = { workspace = true }
fork_choice_store = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
genesis = { workspace = true }
grandine_version = { workspace = true }
helper_functions = { workspace = true }
hex-literal = { workspace = true }
http_api = { workspace = true }
itertools = { workspace = true }
libmdbx = { workspace = true }
http_api_utils = { workspace = true }
keymanager = { workspace = true }
kzg_utils = { workspace = true }
tracing = { workspace = true }
logging = { workspace = true }
metrics = { workspace = true }
p2p = { workspace = true }
prometheus_metrics = { workspace = true }
pubkey_cache = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signer = { workspace = true }
slasher = { workspace = true }
slashing_protection = { workspace = true }
std_ext = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[features]
default = ["bls/blst", "kzg_utils/blst"]

logger-always-write-style = []

# `preset-any` and `network-any` should not be passed to Cargo.
# They only exist to avoid duplicating lists of features.
preset-any = []

preset-mainnet = ['preset-any']
preset-minimal = ['preset-any']

network-any = []

network-goerli      = ['runtime/network-goerli', 'network-any', 'preset-mainnet']
network-mainnet     = ['runtime/network-mainnet', 'network-any', 'preset-mainnet']
network-sepolia     = ['runtime/network-sepolia', 'network-any', 'preset-mainnet']
network-shadow      = ['runtime/network-shadow', 'network-any', 'preset-mainnet']
network-holesky     = ['runtime/network-holesky', 'network-any', 'preset-mainnet']
network-hoodi       = ['runtime/network-hoodi', 'network-any', 'preset-mainnet']

default-networks = [
    'network-mainnet',
    'network-sepolia',
    'network-holesky',
    'network-hoodi',
]
