[package]
name = 'grandine'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
allocator = { workspace = true }
anyhow = { workspace = true }
bls = { workspace = true }
clap = { workspace = true }
kzg_utils = { workspace = true }
logging = { workspace = true }
runtime = { workspace = true }
tracing = { workspace = true }

[features]
default = ["bls/blst", "kzg_utils/blst"]

logger-always-write-style = []

# `preset-any` and `network-any` should not be passed to Cargo.
# They only exist to avoid duplicating lists of features.
preset-any = []

preset-mainnet = ['preset-any']
preset-minimal = ['preset-any']

network-any = []

network-goerli      = ['runtime/network-goerli', 'network-any', 'preset-mainnet']
network-mainnet     = ['runtime/network-mainnet', 'network-any', 'preset-mainnet']
network-sepolia     = ['runtime/network-sepolia', 'network-any', 'preset-mainnet']
network-shadow      = ['runtime/network-shadow', 'network-any', 'preset-mainnet']
network-holesky     = ['runtime/network-holesky', 'network-any', 'preset-mainnet']
network-hoodi       = ['runtime/network-hoodi', 'network-any', 'preset-mainnet']

default-networks = [
    'network-mainnet',
    'network-sepolia',
    'network-holesky',
    'network-hoodi',
]
