[package]
name = 'grandine_version'
version = '2.0.0'
authors = ['Grandine <info@grandine.io>']
edition = { workspace = true }

[dependencies]
const_format = { workspace = true }
git-version = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ['git-version']
stub-grandine-version = []
