[package]
name = 'helper_functions'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arithmetic = { workspace = true }
bit_field = { workspace = true }
bls = { workspace = true }
derive_more = { workspace = true }
enum-map = { workspace = true }
enumset = { workspace = true }
hashing = { workspace = true }
itertools = { workspace = true }
num-integer = { workspace = true }
parse-display = { workspace = true }
prometheus_metrics = { workspace = true, optional = true }
pubkey_cache = { workspace = true }
rc-box = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
shuffling = { workspace = true }
ssz = { workspace = true }
static_assertions = { workspace = true }
std_ext = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
try_from_iterator = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
unwrap_none = { workspace = true }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
im = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
duplicate = { workspace = true }
hex-literal = { workspace = true }
nonzero_ext = { workspace = true }
spec_test_utils = { workspace = true }
test-case = { workspace = true }
test-generator = { workspace = true }

[features]
metrics = ['dep:prometheus_metrics']
tracing = ['dep:tracing']
